Bug 673969 - System preference for "visible passwords" not followed. r=blassey